# probsafety

./: .gitignore  Makefile  pyproject.toml
configs/: exp1.toml
data/: preprocess.py
data/compiler_flags/: compiler_flags_summary.csv
experiments/: 1dscan.py  1dscan.sbatch  1dscan.toml  clock_speeds.py  exp1.py  exp1.toml  fixed_clock.py  fixed_clock.toml  fixed_period.py  run_experiment.sbatch  single_point.py  utilization.toml  utils.py
results/: plot.ipynb
results/1dscan_20241115_1152/: results.csv
results/1dscan_20241115_1210/: config.toml  results.csv
results/1dscan_20241115_1213/: config.toml  results.csv
results/1dscan_20241115_1222/: config.toml  results.csv
results/1dscan_20241115_1238/: config.toml  results.csv
results/1dscan_20241115_1647/: config.toml  results.csv
results/1dscan_20241119_1754/: config.toml  results.csv
results/clock_speeds_20241111_0229/: config.toml  results.csv
results/clock_speeds_20241111_0236/: results.csv
results/clock_speeds_20241111_0242/: clock_speeds.toml  results.csv
results/clock_speeds_20241111_0253/: clock_speeds.toml  results.csv
results/clock_speeds_20241111_0324/: results.csv
results/clock_speeds_20241111_0327/: clock_speeds.toml  results.csv
results/clock_speeds_20241111_0329/: clock_speeds.toml  results.csv
results/clock_speeds_20241111_0631/: clock_speeds.toml  results.csv
results/clock_speeds_20241111_0649/: config.toml  results.csv
results/fixed_clock/: results.csv
results/fixed_clock_20241111_0023/: fixed_clock.toml
tests/: sim_test.py  stats_test.py  tests.py  utils_test.py
(+24 files in other folders)
