[project]
name = "probsafety"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shengjie Xu", email = "shengjiex98@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "control>=0.10.1",
    "scipy>=1.14.1",
    "numpy>=2.1.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
